--- a/backend/package.json
+++ b/backend/package.json
@@ -46,5 +46,8 @@
     "prettier": "@massalabs/prettier-config-as",
     "engines": {
         "node": ">=16"
+    },
+    "dependencies": {
+        "@massalabs/wallet-provider": "^3.1.1"
     }
 }
